--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
+    "react-tabs": "^6.0.2",
     "sass": "^1.68.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8",
