--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "daisyui": "^4.4.2",
     "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
