--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
